# backend/server-a/api/swagger.yaml
@@ -344,28 +344,6 @@ paths:
         "404":
           description: "User not found"
       x-swagger-router-controller: "User"
-  /user/validate/{token}:
-    post:
-      tags:
-      - "user"
-      summary: "Validate JWT"
-      operationId: "validateToken"
-      produces:
-      - "application/json"
-      parameters:
-      - name: "token"
-        in: "path"
-        description: "JWT to be validated."
-        required: true
-        type: "string"
-      responses:
-        "200":
-          description: "token validated succesfully"
-        "400":
-          description: "token missing"
-        "401":
-          description: "jwt malformed"
-      x-swagger-router-controller: "User"
 securityDefinitions:
   api_key:
     type: "apiKey"
